--- a/public/admin.html
+++ b/public/admin.html
@@ -9,53 +9,73 @@
   <div id="orders"></div>
 
   <script>
-    <script>
-  async function fetchUploads() {
-    const res = await fetch('/uploads-data');
-    const data = await res.json();
-    const container = document.getElementById('orders');
+    async function deleteOrder(id, filename) {
+      const confirmed = confirm("Are you sure you want to delete this order?");
+      if (!confirmed) return;
 
-    container.innerHTML = '';
+      const res = await fetch('/delete-order', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ id, filename })
+      });
 
-    if (data.length === 0) {
-      container.innerHTML = '<p>No uploads yet.</p>';
-      return;
+      const result = await res.json();
+      if (result.success) {
+        alert('🗑️ Deleted successfully!');
+        fetchUploads(); // Refresh the list
+      } else {
+        alert('❌ Failed to delete.');
+      }
     }
 
-    data.forEach((item) => {
-      const div = document.createElement('div');
-      div.innerHTML = `
-        <hr>
-        <p><strong>Email:</strong> ${item.email}</p>
-        <img src="/uploads/${item.filename}" width="200"><br>
-        <button onclick="markAsPaid('${item._id}')">Mark as Paid</button>
-        <p id="status-${item._id}">${item.paid ? '✅ Paid' : '❌ Not Paid'}</p>
-      `;
-      container.appendChild(div);
-    });
-  }
+    async function markAsPaid(id) {
+      console.log("🔁 Sending payment for:", id);
 
-  async function markAsPaid(id) {
-    console.log("🔁 Sending payment for:", id);
+      const res = await fetch('/mark-paid', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ id })
+      });
 
-    const res = await fetch('/mark-paid', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ id })
-    });
+      const result = await res.json();
+      console.log("📬 Response:", result);
 
-    const result = await res.json();
-    console.log("📬 Response:", result);
-
-    if (result.success) {
-      document.getElementById(`status-${id}`).textContent = '✅ Paid';
-      alert('✅ Marked as paid and email sent!');
-    } else {
-      alert('❌ Failed to mark as paid.');
+      if (result.success) {
+        document.getElementById(`status-${id}`).textContent = '✅ Paid';
+        alert('✅ Marked as paid and email sent!');
+      } else {
+        alert('❌ Failed to mark as paid.');
+      }
     }
-  }
 
-  fetchUploads(); // Load on page open
-</script>
+    async function fetchUploads() {
+      const res = await fetch('/uploads-data');
+      const data = await res.json();
+      const container = document.getElementById('orders');
+
+      container.innerHTML = '';
+
+      if (data.length === 0) {
+        container.innerHTML = '<p>No uploads yet.</p>';
+        return;
+      }
+
+      data.forEach((item) => {
+        const div = document.createElement('div');
+        div.innerHTML = `
+          <hr>
+          <p><strong>Email:</strong> ${item.email}</p>
+          <img src="/uploads/${item.filename}" width="200"><br>
+          <button onclick="markAsPaid('${item._id}')">Mark as Paid</button>
+          <button onclick="deleteOrder('${item._id}', '${item.filename}')">🗑️ Delete</button>
+          <p id="status-${item._id}">${item.paid ? '✅ Paid' : '❌ Not Paid'}</p>
+        `;
+        container.appendChild(div);
+      });
+    }
+
+    fetchUploads(); // Load on page open
+  </script>
 </body>
 </html>
+
